k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentiment-api-svc
  labels:
    app: sentiment-api
spec:
  type: LoadBalancer
  selector:
    app: sentiment-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
